CFN-678 : Detect Vector Icons & Icon Groups, Download to Public Storage, and Return Asset List
