# routes/api.php
@@ -4,7 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ImageProcessorController;
 use App\Http\Controllers\FigmaTailwindController;
-use App\Http\Controllers\FigmaAuthController;
+use App\Http\Controllers\IconDetectorController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -13,7 +13,8 @@ Route::get('/user', function (Request $request) {
 Route::prefix('v1')->group(function () {
     // Process Figma image
     Route::post('/process-image', [ImageProcessorController::class, 'processImage'])->name('api.process-image');
-    Route::post('figma/tailwind-config', [FigmaTailwindController::class, 'generate']);
+    Route::post('figma/tailwind-config', [FigmaTailwindController::class, 'generate'])->name('api.v1.figma.tailwind-config');
+       Route::post('/detect-icons', [IconDetectorController::class, 'detectIcons'])->name('api.detect-icons');
 });
 
 
